fixed the disappearing <legend> on ie9
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/appointments@7436 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/css/front.css
+++ b/css/front.css
@@ -80,7 +80,7 @@ opacity:0.6;
 	border: 0 !important;
 }
 table.appointments-legend-table {
-	width: 90%;
+	width: auto;
 }
 .appointments-legend-table  td{
 	padding-right: 10px;
